--- a/evento/src/main/resources/templates/evento/formEvento.html
+++ b/evento/src/main/resources/templates/evento/formEvento.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" 
-	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://thymeleaf.org"
+	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout"
+>
 <head>
 <meta charset="ISO-8859-1">
-<title>EventosApp</title>
+<title>Eventos App</title>
 </head>
 <body>
 
-<h1>Cadastro de Eventos</h1>
-
-<form action="post">
-	Nome: <input type="text" value="" name="nome"/>
-	Local: <input type="text" value="" name="local"/>
-	Data: <input type="text" value="" name="data"/>
-	Horario: <input type="text" value="" name="horario"/>
-	
-	<button type="submit">Salvar</button>
-</form>
+	<h1>Cadastro de Eventos</h1>>
+		
+		<form method="post">
+			Nome: <input type="text" value="" name="nome" />
+			Local:<input type="text" value="" name="local" />
+			Data: <input type="text" value="" name="data" />
+			Horario<input type="text" value="" name="horario" />
+			
+			<button type="submit">Salvar dados</button>
+		</form>
 </body>
 </html>
