--- a/evento/src/main/resources/templates/evento/formEvento.html
+++ b/evento/src/main/resources/templates/evento/formEvento.html
@@ -3,12 +3,12 @@
 	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout"
 >
 <head>
-<meta charset="ISO-8859-1">
-<title>Eventos App</title>
+	<meta charset="ISO-8859-1" />
+	<title>Eventos App</title>
 </head>
 <body>
 
-	<h1>Cadastro de Eventos</h1>>
+	<h1>Cadastro de Eventos</h1>
 		
 		<form method="post">
 			Nome: <input type="text" value="" name="nome" />
