--- a/evento/src/main/resources/templates/index.html
+++ b/evento/src/main/resources/templates/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
+<html xmlns:th="http://thymeleaf.org"
+	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout">
+	<head>
+<meta charset="ISO-8859-1"/>
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>Lista de Eventos</h1>
+	<h3><a href="/cadastraEvento">Cadastrar Evento </a></h3>
+	
+	
+	<div th:each="evento: ${eventos}">
+		<div class="row">
+		
+			<p><span th:text="${evento.nome}"></span></p>
+			<p><span th:text="${evento.local}"></span></p>
+			<p><span th:text="${evento.data}"></span></p>
+			<p><span th:text="${evento.horario}"></span></p>
+		</div>
+	
+	</div>
+	
 </body>
 </html>
