--- a/evento/src/main/resources/templates/evento/formEvento.html
+++ b/evento/src/main/resources/templates/evento/formEvento.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
-	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout"
->
+	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout">
 <head>
-	<meta charset="ISO-8859-1" />
-	<title>Eventos App</title>
+
+<title>Eventos App</title>
+
+
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet"
+	href="materialize/css/materialize.min.css" media="screen,projection" />
+
+<!--Let browser know website is optimized for mobile-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 </head>
 <body>
 
-	<h1>Cadastro de Eventos</h1>
+	<header>
+			 <nav>
+			    <div class="nav-wrapper">
+			      <a href="#" class="brand-logo">Cadastro de Eventos</a>
+			      <ul id="nav-mobile" class="right hide-on-med-and-down">
+			        <li><a href="/eventos" class="waves-effect waves-light btn"><i
+			class="material-icons left">format_list_bulleted</i> Lista de Eventos</a></li>
+			       
+			      </ul>
+			    </div>
+			  </nav>
 		
-		<form method="post">
-			Nome: <input type="text" value="" name="nome" />
-			Local:<input type="text" value="" name="local" />
-			Data: <input type="text" value="" name="data" />
-			Horario<input type="text" value="" name="horario" />
+		
+		</header>
+		<br/><br/>
+		<div class="container formEvento">
+	
+			<form class="container" method="post">
+				Nome: <input type="text" value="" name="nome"/>
+				<div class="row">
+					<div class="input-field col s6">
+						Local: <input type="text" value="" name="local"/>
+					</div>
+					<div class="input-field col s3">
+						Data: <input type="date" value="" name="data"/>
+					</div>
+					<div class="input-field col s3">
+						Horario: <input type="time" value="" name="horario"/>
+					</div>
+				</div>
+				<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 			
-			<button type="submit">Salvar dados</button>
-		</form>
+			</form>
+		</div>
+	<!--Import jQuery before materialize.js-->
+	<script type="text/javascript"
+		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
