--- a/evento/src/main/resources/templates/index.html
+++ b/evento/src/main/resources/templates/index.html
@@ -2,24 +2,57 @@
 <html xmlns:th="http://thymeleaf.org"
 	xmlns:layout="http:www.ultraq.net.nz/thymeleaf/layout">
 	<head>
-<meta charset="ISO-8859-1"/>
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Lista de Eventos</h1>
-	<h3><a href="/cadastraEvento">Cadastrar Evento </a></h3>
-	
-	
-	<div th:each="evento: ${eventos}">
-		<div class="row">
 		
-			<p><span th:text="${evento.nome}"></span></p>
-			<p><span th:text="${evento.local}"></span></p>
-			<p><span th:text="${evento.data}"></span></p>
-			<p><span th:text="${evento.horario}"></span></p>
-		</div>
+		<title>Insert title here</title>
+		<!--Import Google Icon Font-->
+	     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+	     <!--Import materialize.css-->
+	     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
 	
-	</div>
+	     <!--Let browser know website is optimized for mobile-->
+	     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	    
+	</head>
+	<body>
 	
-</body>
+		<header>
+			 <nav>
+			    <div class="nav-wrapper">
+			      <a href="#" class="brand-logo">Lista de Eventos</a>
+			      <ul id="nav-mobile" class="right hide-on-med-and-down">
+			        <li><a href="/cadastraEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle</i>Cadastrar Evento</a></li>
+			       
+			      </ul>
+			    </div>
+			  </nav>
+		
+		
+		</header>
+		
+			
+		<table class="container">
+			<thead>
+				<tr>
+					<th>Nome</th>
+					<th>Local</th>
+					<th>Data</th>
+					<th>Horário</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="evento : ${eventos}">
+					<td><a th:href="${(#mvc.url('EC#detalheEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
+					<td><span th:text="${evento.local}"></span></td>
+					<td><span th:text="${evento.data}"></span></td>
+					<td><span th:text="${evento.horario}"></span></td>
+					
+				</tr>
+			</tbody>
+		</table>
+		
+		  <!--Import jQuery before materialize.js-->
+	      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	    
+	</body>
 </html>
