--- a/evento/src/main/resources/templates/index.html
+++ b/evento/src/main/resources/templates/index.html
@@ -37,6 +37,7 @@
 					<th>Local</th>
 					<th>Data</th>
 					<th>Horário</th>
+					<th>Deletar</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -44,7 +45,8 @@
 					<td><a th:href="${(#mvc.url('EC#detalheEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
 					<td><span th:text="${evento.local}"></span></td>
 					<td><span th:text="${evento.data}"></span></td>
-					<td><span th:text="${evento.horario}"></span></td>
+					<td><span th:text="${evento.horario}"></span></td>					
+					<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('EC#deletarEvento').arg(0, evento.codigo)).build()}"><i class="material-icons left">delete</i></a></td>
 					
 				</tr>
 			</tbody>
