--- a/evento/src/main/resources/templates/evento/formEvento.html
+++ b/evento/src/main/resources/templates/evento/formEvento.html
@@ -15,7 +15,7 @@
 
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 		</header>
 		<br/><br/>
 		<div class="container formEvento">
-	
+			<th:block th:include="mensagem"></th:block>
 			<form class="container" method="post">
 				Nome: <input type="text" value="" name="nome"/>
 				<div class="row">
